external-crates/move/crates/move-compiler/tests/move_check/expansion/use_function_same_name_as_struct.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
warning[W09001]: unused alias
  ┌─ tests/move_check/expansion/use_function_same_name_as_struct.move:9:17
  │
9 │     use 0x2::X::u;
  │                 ^ Unused 'use' of alias 'u'. Consider removing it
  │
  = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E02010]: invalid name
   ┌─ tests/move_check/expansion/use_function_same_name_as_struct.move:10:12
   │
10 │     struct u {}
   │            ^ Invalid struct name 'u'. Struct names must start with 'A'..'Z'

warning[W09001]: unused alias
   ┌─ tests/move_check/expansion/use_function_same_name_as_struct.move:15:22
   │
15 │     use 0x2::X::u as Bar;
   │                      ^^^ Unused 'use' of alias 'Bar'. Consider removing it
   │
   = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/expansion/use_function_same_name_as_struct.move:15:22
   │
14 │     struct Bar {}
   │            --- Alias previously defined here
15 │     use 0x2::X::u as Bar;
   │                      ^^^ Duplicate module member or alias 'Bar'. Top level names in a namespace must be unique
